fdo#71763: F6 key moves focus on this trip: Menu -> Sidebar -> Thumbnail view

Sidebar and thumbnail View are actually not separate windows
but F6 key traversal should simulate it as they would be.
Define a new getfocus flag called GETFOCUS_F6 which means focus
were grabed as a result of pressing F6 key. Use this and other two
(GETFOCUS_FORWARD, GETFOCUS_BACKWARD) flags to indicate the focus were
grabbed along subwindow relation (define a new ImplGrabFocusToDocument
method with a flag parameter on the analogy of GrabFocus() <-> ImplGrabFocus()).
Handle F6, Shift+F6 inside BackingWindow as it would have
two subwindow (sidebar and thumbnail view).
Plus Ctrl+F6 -> grab focus to the thumbnail view.

Change-Id: Ie43d761e7cb0269afb79481a81947a4b96e1dde0