include/vcl/window.hxx
@@ -259,6 +259,7 @@ typedef sal_uInt16 StateChangedType;
 #define GETFOCUS_UNIQUEMNEMONIC         ((sal_uInt16)0x0100)
 #define GETFOCUS_INIT                   ((sal_uInt16)0x0200)
 #define GETFOCUS_FLOATWIN_POPUPMODEEND_CANCEL ((sal_uInt16)0x0400)
+#define GETFOCUS_F6                     ((sal_uInt16)0x1000)
 
 // Draw-Flags fuer Draw()
 #define WINDOW_DRAW_MONO                ((sal_uLong)0x00000001)
@@ -481,6 +482,7 @@ public:
     SAL_DLLPRIVATE void        ImplCallMouseMove( sal_uInt16 nMouseCode, sal_Bool bModChanged = sal_False );
     SAL_DLLPRIVATE void        ImplGenerateMouseMove();
     SAL_DLLPRIVATE void        ImplGrabFocus( sal_uInt16 nFlags );
+    SAL_DLLPRIVATE void        ImplGrabFocusToDocument( sal_uInt16 nFlags );
     SAL_DLLPRIVATE void        ImplInvertFocus( const Rectangle& rRect );
     SAL_DLLPRIVATE void        ImplControlFocus( sal_uInt16 nFlags = 0 );
     SAL_DLLPRIVATE Window*     ImplGetDlgWindow( sal_uInt16 n, sal_uInt16 nType, sal_uInt16 nStart = 0, sal_uInt16 nEnd = 0xFFFF, sal_uInt16* pIndex = NULL );
